Bootstrap complete - need to add animated css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="container main-content">
   <div class="row">
-   <div class="col-md-8">
+   <div class="col-xs-12 col-sm-12 col-md-8">
     <div class="panel panel-default">
       <div class="panel-body">
         <div class="row">
@@ -55,7 +55,7 @@
      
 <!-- Contact Me - Sidebar -->
 
-   <div class="col-md-4">
+   <div class="col-xs-12 col-sm-12 col-md-4">
     <div class="panel panel-default">
       <div class="panel-body">
         <div class="page-header">
@@ -63,13 +63,13 @@
         </div> <!-- panel header -->
 
       <div class="row">
-          <div class="col-md-3">
+          <div class="col-xs-2 col-sm-2 col-md-3">
             <a href="https://www.linkedin.com/in/aaron-m-arndt" target=" "><img class="img-responsive" src="images/linkedin_circle_color-128.png" alt="LinkedIn"></a>
           </div>
-          <div class="col-md-offset-1 col-md-3">
+          <div class="col-xs-2 col-sm-2 col-md-offset-1 col-md-3">
             <a href="https://github.com/AaronA05" target=" "><img class="img-responsive" src="images/github-128.png" alt="GitHub"></a>
           </div>
-          <div class="col-md-offset-1 col-md-3">
+          <div class="col-xs-2 col-sm-2 col-md-offset-1 col-md-3">
             <a href="https://stackoverflow.com/users/8315797/aaron-a" target=" "><img class="img-responsive" src="images/stackoverflow-128.png" alt="Stack-Overflow"></a>
           </div>
       </div> <!-- row for pictures -->
@@ -87,9 +87,13 @@
 </body>
 
 <!-- Footer -->
-<footer class="navbar navbar-default navbar-fixed-bottom">
+<footer class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container-fluid">
-    <p>&copy;Copyright 2017 Aaron Arndt</p>
+    <div class="row">
+      <div class="col-md-offset-5 col-md-4">
+        <p>&copy;Copyright 2017 Aaron Arndt</p>
+      </div>
+    </div>
   </div>
 </footer>
 
