--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
           <div class="col-xs-4 col-sm-4 col-md-4">
             <div class="thumbnail Project-One">
               <a href="https://aarona05.github.io/Get-Giphy/">
-                <img src="images/carlton.webp" alt="Project 1" style="width:100%">
+                <img src="images/giphy.png" alt="Project 1" style="width:100%">
                 <div class="caption">
                   <h3>Application 1</h3>
                   <p>Get Giphy</p>
