Updated pages and ReadMe file

--- a/portfolio.html
+++ b/portfolio.html
@@ -129,6 +129,7 @@
       <div class="panel-body">
         <div class="page-header">
           <h2>Contact Me</h2>
+          <h6>Email: aaronmarndt@gmail.com</h6>
         </div> <!-- panel header -->
 
       <div class="row">
