--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
           <div class="col-md-4">
             <img class="img-responsive pull-left" src="images/Headshot.jpg">
           </div>
-          <p>My name is Aaron Arndt and I am currently working through the SMU Coding Bootcamp in Dallas, Texas. My current position is Onboarding Project Manager with an IT Company in Las Colinas and I have 3+ years experience of IT project management and consulting. I am excited to push my career in a different direction and get started with a web development career. I really do not have that much interesting stuff to say about myself right now so I have used <a href="http://officeipsum.com/" target=" ">Office Ipsum</a> to generate some amusing "client ipsum" that everyone in IT has probably heard at one point or another.</p>
-          <p>Can it be more retro. Can you help me out? you will get a lot of free exposure doing this. Remember, everything is the same or better I want you to take it to the next level it looks a bit empty, try to make everything bigger. Do less with more. Can we try some other colours maybe that's great, but can you make it work for ie 2 please nor I want you to take it to the next level, yet what you've given us is texty, we want sexy I know somebody who can do this for a reasonable cost, nor can you make it pop low resolution? It looks ok on my screen. Make it sexy there are more projects lined up charge extra the next time anyway, you are the designer, you know what to do I need a website. Can you make the logo bigger yes bigger bigger still the logo is too big theres all this spanish text on my site this red is too red or the website doesn't have the theme i was going for or mmm, exactly like that, but different it looks a bit empty, try to make everything bigger, nor can you make the blue bluer?. We are a non-profit organization can it be more retro we have big contacts we will promote you make it original. </p>
-          <p>Can you use a high definition screenshot this looks perfect. Just  Photoshop out the dog, add a baby, and make the curtains blue i'll know it when i see it yet other agencies charge much lesser. Make it pop i'll know it when i see it nor can you make the blue bluer? yet we need more images of groups of people having non-specific types of fun we are your relatives, or can you help me out? you will get a lot of free exposure doing this.</p>
+          <p>My name is Aaron Arndt and I am full-stack web developer. I graduated from Southern Methodist University Coding Bootcamp and truly enjoy the process of coding. I have experiecne with both front-end and back-end development languages including HTML, CSS3, Javascript, ES6, jQuery, ReactJS, and NodeJS. I also have experience with database management including; MongoDB, MySQL, and Firebase. I am excited to push my career in a new direction and get started with a web development career.</p>
+          <p>You can view my projects at the link in the navbar above and if you have any questions please do not hesistate to contact me!</p>
         </div> <!-- span12 -->
         </div> <!-- row for picture and paragraph -->
 
@@ -60,6 +59,7 @@
       <div class="panel-body">
         <div class="page-header">
           <h2>Contact Me</h2>
+          <h6>Email: aaronmarndt@gmail.com</h6>
         </div> <!-- panel header -->
 
       <div class="row">
